# adventofcode-hs-2025

./: .gitignore  adventofcode.cabal  fetch.sh  mkday.rb
lib/AdventOfCode/: Search.hs
