cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2025
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- in GHC 9.0.1, enabling -Wmissing-exported-signatures disabled stricter -Wmissing-signatures
    -- this was fixed in GHC 9.2.1, so it's safe to keep this now.
    -- (Not mentioned in release notes, but git tag --contains e1f133bf5ee30f25a94b4f3bf4d26d1a9381f0d9)
    ---Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

executable 01_secret_entrance_dial
  import: bin, flags
  build-depends: base, adventofcode2025
  main-is:       01_secret_entrance_dial.hs

executable 02_gift_shop_repeats
  import: bin, flags
  build-depends: base, adventofcode2025, aocsplit
  main-is:       02_gift_shop_repeats.hs

executable 03_lobby_select_digits
  import: bin, flags
  build-depends: base, adventofcode2025
  main-is:       03_lobby_select_digits.hs

executable 04_printing_dept_grid_fixpt
  import: bin, flags
  build-depends: base, adventofcode2025, containers
  main-is:       04_printing_dept_grid_fixpt.hs

executable 05_cafeteria_intervals
  import: bin, flags
  build-depends: base, adventofcode2025, aocsplit
  main-is:       05_cafeteria_intervals.hs

executable 06_trash_compactor_math
  import: bin, flags
  build-depends: base, adventofcode2025
  main-is:       06_trash_compactor_math.hs
